--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.4",
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
-    "@types/node": "^18.16.3"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.0.4"
   }
 }
